# python-backend-boilerplate

./: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
migrations/: env.py  script.py.mako
migrations/versions/: 188c9bc90464_create_chatbot_table.py  c2d5978390a3_added_user_table.py
src/: main.py
src/admin/: admin_base.py  chatbot_admin.py  user_admin.py
src/models/: chatbot.py  user.py
src/repositories/: chatbot_repository.py
src/routes/: chat.py  health.py
src/services/langchain/: chatbot_handler.py  chatbot_service.py
src/utils/: config.py  database.py  db.py
