[tool.poetry]
name = "python-backend-boilerplate"
version = "0.1.0"
description = ""
authors = ["Francis Yáñez <francis@leadingdev.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
setuptools = "^73.0.1"
fastapi = "^0.112.1"
sqladmin = {extras = ["full"], version = "^0.18.0"}
sqlmodel = "^0.0.21"
alembic = "^1.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
