[tool.poetry]
name = "ai-api"
version = "0.1.0"
description = ""
authors = ["Francis Yáñez <francis@leadingdev.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^74.0.0"
fastapi = "^0.112.1"
sqladmin = {extras = ["full"], version = "^0.18.0"}
sqlmodel = "^0.0.21"
alembic = "^1.13.2"
pydantic-settings = "^2.4.0"
langchain = "^0.2.15"
langchain-openai = "^0.1.23"
uvicorn = "^0.30.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
